outs/67282609.txt
# Output generated by @ua_chatgpt_bot

Ваше питання: firstly I created inputDF  
 
%python 
from pyspark.sql import DataFrame 
inputDF = spark.sql("SELECT * FROM employee_data") 
 
it executed correctly 
 
then I runned this scala code: 
 
%scala 
import org.apache.spark.sql.DataFrame 
 
val HierarchicalData = spark.sql("select e.empl_id, e.fullname, e.profile_status, e.manager_id,  e.ManagerID_byUnitTree, e.unit_id, 0 as Level, concat(',',cast(empl_id as varchar(20)),',') as ePath from employee_data e where ManagerID_byUnitTree is null") 
 
def getHierarchicalData(inputDF:DataFrame, level:Int):DataFrame = { 
  val childDF = spark.sql(s"select ce.empl_id, ce.fullname, ce.profile_status, ce.manager_id, ce.ManagerID_byUnitTree, ce.unit_id, ${level+1} as Level, concat(ae.ePath,cast(ce.empl_id as varchar(20)),',') as ePath from inputDF ae inner join employee_data ce on ce.ManagerID_byUnitTree=ae.empl_id") 
  
  if(childDF.count == 0)  
    return inputDF 
  else { 
    val unionDF = inputDF.union(childDF) 
    return getHierarchicalData(unionDF, level+1) 
  } 
 
} 
 
val result = getHierarchicalData(HierarchicalData, 0) 
result.show() 
 
but I got an error: 
 
command-67708655874799:4: error: not found: type DataFrame 
def getHierarchicalData(inputDF:DataFrame, level:Int):DataFrame = { 
                                                      ^ 
command-67708655874799:4: error: not found: type DataFrame 
def getHierarchicalData(inputDF:DataFrame, level:Int):DataFrame = { 
                                ^

Відповідь: command-67708655874799:10: error: not found: value inputDF 
    val childDF = spark.sql(s"select ce.empl_id, ce.fullname, ce.profile_status, ce.manager_id, ce.ManagerID_byUnitTree, ce.unit_id, ${level+1} as Level, concat(ae.ePath,cast(ce.empl_id as varchar(20)),',') as ePath from inputDF ae inner join employee_data ce on ce.ManagerID_byUnitTree=ae.empl_id") 
                           ^ 
3 errors found 
 
I think the issue is that DataFrame is not imported properly, however I imported it from pyspark.sql above. Do you know how can I fix it? Thank you.

